# serious-http-library

./: .gitignore  CMakeLists.txt  README.md  flake.nix  justfile
.claude/: build.md  http-deserialize-review.md  target-deserialization-plan.md
.claude/commands/: build.md  test.md
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt
examples/src/: 00_http_v1_server.cpp
include/sl/http/: v1.hpp
include/sl/http/v1/: deserialize.hpp  detail.hpp  serialize.hpp  types.hpp
include/sl/http/v1/deserialize/: message.hpp  request.hpp  target.hpp
include/sl/http/v1/detail/: deserialize_machine.hpp  deserialize_request.hpp  machine.hpp  percent_encoding.hpp  strings.hpp  target.hpp
include/sl/http/v1/serialize/: message.hpp  target.hpp
include/sl/http/v1/types/: fields.hpp  method.hpp  request_start.hpp  response_start.hpp  status.hpp  target.hpp  version.hpp
src/v1/: deserialize.cpp  detail.cpp
src/v1/deserialize/: message.cpp  request.cpp  target.cpp
src/v1/detail/: deserialize_request.cpp  percent_encoding.cpp  strings.cpp  target.cpp
src/v1/serialize/: message.cpp  target.cpp
src/v1/types/: fields.cpp  request_start.cpp  response_start.cpp
test/: CMakeLists.txt
test/src/: v1_deserialize_test.cpp  v1_detail_deserialize_machine_test.cpp  v1_detail_deserialize_message_test.cpp  v1_detail_deserialize_request_test.cpp  v1_detail_deserialize_target_test.cpp  v1_detail_deserialize_test.cpp  v1_detail_strings_test.cpp  v1_serialize_message_test.cpp
